--- a/.github/actions/lint/action.yml
+++ b/.github/actions/lint/action.yml
@@ -9,7 +9,7 @@ runs:
       uses: github/super-linter/slim@v7
       env:
           VALIDATE_ALL_CODEBASE: false
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ github.token }}
           VALIDATE_JSON: true
           VALIDATE_MARKDOWN: true
           VALIDATE_POWERSHELL: true
